--- a/Curs01/Ex02/index.html
+++ b/Curs01/Ex02/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Picture & Src set</title>
+  </head>
+  <body>
+    <picture>
+      <source media="(max-width: 576px)" srcset="images/w150.png" />
 
- 
+      <source media="(max-width: 768px)" srcset="images/w420.png" />
 
-  <title>Picture & srcset</title>
-</head>
-<body>
+      <source media="(max-width: 992px)" srcset="images/w820.png" />
 
-</body>
+      <img src="images/w1900.png" alt="wide image" />
+    </picture>
+  </body>
 </html>
-
