--- a/Curs01/Ex01/index.html
+++ b/Curs01/Ex01/index.html
@@ -10,6 +10,8 @@
   <body>
     <h1 class="heading">Hello World!</h1>
 
+    <h2 class="h2">Subtitle</h2>
+
     <div class="box box-1">
       <h1>01</h1>
     </div>
@@ -25,5 +27,7 @@
     <div class="box box-5">
       <h1>05</h1>
     </div>
+
+    <h3 class="h3">Hello!!!!!!</h3>
   </body>
 </html>
