Curs01 Ex05, Ex06

--- a/Curs01/Ex06/index.html
+++ b/Curs01/Ex06/index.html
@@ -1,18 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Mixins</title>
-</head>
-<body>
+  <head>
+    <link rel="stylesheet" href="css/style.css" />
+    <title>Mixins</title>
+  </head>
+  <body>
+    <div class="squares"></div>
 
-  <div>
-
-  </div>
-
-
-  <div>
-
-  </div>
-
-</body>
+    <div></div>
+  </body>
 </html>
