--- a/Curs01/Ex06/index.html
+++ b/Curs01/Ex06/index.html
@@ -5,7 +5,11 @@
     <title>Mixins</title>
   </head>
   <body>
-    <div class="squares"></div>
+    <div class="squares">
+      <div class="square-magenta"></div>
+      <div class="square-peru"></div>
+      <div class="square-purple"></div>
+    </div>
 
     <div></div>
   </body>
