--- a/Curs01/Ex06/index.html
+++ b/Curs01/Ex06/index.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <link rel="stylesheet" href="css/style.css" />
-    <title>Mixins</title>
-  </head>
-  <body>
-    <div class="squares">
-      <div class="square-magenta"></div>
-      <div class="square-peru"></div>
-      <div class="square-purple"></div>
-    </div>
+<head>
+  <link
+    rel="stylesheet"
+    href="css/style.css"
+  />
+  <title>Mixins</title>
+</head>
+<body>
+  <div class="squares">
+    <div class="square-magenta"></div>
+    <div class="square-peru"></div>
+    <div class="square-purple"></div>
+  </div>
 
-    <div></div>
-  </body>
+  <div class="circles">
+    <div class="circle-red"></div>
+    <div class="circle-green"></div>
+    <div class="circle-blue"></div>
+  </div>
+</body>
 </html>
