--- a/Curs02/Ex05/index.html
+++ b/Curs02/Ex05/index.html
@@ -10,6 +10,11 @@
 
   <link
     rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
+  >
+
+  <link
+    rel="stylesheet"
     href="css/style.css"
   >
 </head>
@@ -17,5 +22,7 @@
   <div class="square"></div>
   <div class="circle"></div>
   <span class="rhombus"></span>
+
+  <button class="button-left">Go left</button>
 </body>
 </html>
