--- a/Curs01/Ex06/index.html
+++ b/Curs01/Ex06/index.html
@@ -15,7 +15,7 @@
   </div>
 
   <div class="circles">
-    <div class="circle-red"></div>
+    <div class="circle-red circle-border-blue"></div>
     <div class="circle-green"></div>
     <div class="circle-blue"></div>
   </div>
