--- a/Curs02/Ex04/index.html
+++ b/Curs02/Ex04/index.html
@@ -21,7 +21,8 @@
   <button class="btn-primary">Button1</button>
   <button class="btn-secondary">Button2</button>
   <button class="btn-inverted">Button3</button>
-  <button>Button4</button>
-  <button>Button5</button>
+  <button class="btn-inverted-light">Button4</button>
+  <button class="btn-tertiary">Button5</button>
+  <button class="btn-inverted btn-text-gray">New Button</button>
 </body>
 </html>
