--- a/Thread Affair/html/index.html
+++ b/Thread Affair/html/index.html
@@ -250,7 +250,7 @@
                 >
               </a>
 
-              <span class="product-badge">%</span>
+              <span class="product-badge">new entry</span>
             </div>
             <!-- /. product-image-container  -->
 
@@ -298,7 +298,7 @@
                 >
               </a>
 
-              <span class="product-badge">%</span>
+              <span class="product-badge">new entry</span>
             </div>
             <!-- /. product-image-container  -->
 
@@ -459,7 +459,7 @@
                 >
               </a>
 
-              <span class="product-badge">%</span>
+              <span class="product-badge">signed</span>
             </div>
             <!-- /. product-image-container  -->
 
