--- a/Monochrome/html/index.html
+++ b/Monochrome/html/index.html
@@ -18,7 +18,710 @@
   >
 </head>
 <body>
+  <header class="header">
+    <div class="header-contact">
+      <ul>
+        <li>
+          <a
+            href="http://www.youtube.com"
+            title="Youtube"
+            target="_blank"
+            rel="noopener noreferrer"
+          ><i class="fab fa-youtube"></i></a>
+        </li>
 
+        <li>
+          <a
+            href="http://www.twitter.com"
+            title="Twitter"
+            target="_blank"
+            rel="noopener noreferrer"
+          ><i class="fab fa-twitter"></i></a>
+        </li>
+
+        <li>
+          <a
+            href="http://www.facebook.com"
+            title="Facebook"
+            target="_blank"
+            rel="noopener noreferrer"
+          ><i class="fab fa-facebook-f"></i></a>
+        </li>
+
+        <li>
+          <a
+            href="http://www.instagram.com"
+            title="Instagram"
+            target="_blank"
+            rel="noopener noreferrer"
+          ><i class="fab fa-instagram-square"></i></a>
+        </li>
+      </ul>
+
+      <p>
+        <a href="tel:+44 (0)10 2345 6789">CALL US +44 (0)10 2345 6789</a>
+      </p>
+    </div>
+    <!-- ./ header-contact  -->
+
+    <div class="header-controls">
+      <form action="header-search">
+        <div class="search-form">
+          <button type="submit"><i class="fas fa-search icon"></i></button>
+          <input
+            type="text"
+            name="search"
+            id="search"
+            placeholder="Search"
+          >
+        </div>
+      </form>
+      <!-- ./ search-form  -->
+
+      <div class="user-control">
+        <ul>
+          <li>
+            <a
+              href=""
+              title="Account"
+            >
+              <i class="far fa-user"></i>
+            </a>
+          </li>
+
+          <li>
+            <a
+              href=""
+              title="wishlist"
+            >
+              <i class="far fa-heart"></i>
+            </a>
+          </li>
+
+          <li>
+            <a
+              href=""
+              title="cart"
+            >
+              <i class="fas fa-shopping-bag"></i>
+            </a>
+          </li>
+        </ul>
+      </div>
+      <!-- ./user-control  -->
+    </div>
+    <!-- ./ header-controls  -->
+
+    <nav class="nav">
+      <ul>
+        <li>
+          <a
+            href=""
+            title="New Arrivals"
+          >New Arrivals</a>
+        </li>
+
+        <li>
+          <a
+            href=""
+            title="Brands"
+          >Brands</a>
+        </li>
+
+        <li>
+          <a
+            href=""
+            title="Men`s"
+          >Men`s</a>
+        </li>
+
+        <li>
+          <a
+            href=""
+            title="Women`s"
+          >Women`s</a>
+        </li>
+
+        <li>
+          <a
+            href=""
+            title="Accessories"
+          >Accessories</a>
+        </li>
+
+        <li>
+          <a
+            href=""
+            title="Lookbook"
+          >Lookbook</a>
+        </li>
+      </ul>
+    </nav>
+    <!-- ./ nav  -->
+  </header>
+  <!-- ./ header  -->
+
+  <main class="main">
+    <section class="catalog-preview">
+      <h1>New Stuff</h1>
+
+      <div class="catalog-tiles">
+        <article class="catalog-tile">
+          <a
+            href=""
+            class="image-container"
+            title="Product01"
+          ><img
+              src="../img/products/product01.png"
+              alt="Product01"
+            ></a>
+
+          <a
+            href=""
+            title="WishList"
+          > <i class="far fa-heart product-badge"></i>
+          </a>
+
+          <a
+            href=""
+            class="product-title"
+            title="Monochrome"
+          >
+            <span>MONOCHROME</span>
+          </a>
+
+          <div class="product-pricing">
+            <span class="product-price">$425</span>
+          </div>
+        </article>
+        <!-- ./ catalog-tile  -->
+
+        <article class="catalog-tile">
+          <a
+            href=""
+            class="image-container"
+            title="Product01"
+          ><img
+              src="../img/products/product02.png"
+              alt="Product01"
+            ></a>
+
+          <a
+            href=""
+            title="WishList"
+          > <i class="far fa-heart product-badge"></i>
+          </a>
+
+          <a
+            href=""
+            class="product-title"
+            title="Monochrome"
+          >
+            <span>MONOCHROME</span>
+          </a>
+
+          <div class="product-pricing">
+            <span class="product-price">$425</span>
+          </div>
+        </article>
+        <!-- ./ catalog-tile  -->
+
+        <article class="catalog-tile">
+          <a
+            href=""
+            class="image-container"
+            title="Product01"
+          ><img
+              src="../img/products/product03.png"
+              alt="Product01"
+            ></a>
+
+          <a
+            href=""
+            title="WishList"
+          > <i class="far fa-heart product-badge"></i>
+          </a>
+
+          <a
+            href=""
+            class="product-title"
+            title="Monochrome"
+          >
+            <span>MONOCHROME</span>
+          </a>
+
+          <div class="product-pricing">
+            <span class="product-price">$425</span>
+          </div>
+        </article>
+        <!-- ./ catalog-tile  -->
+
+        <article class="catalog-tile">
+          <a
+            href=""
+            class="image-container"
+            title="Product01"
+          ><img
+              src="../img/products/product04.png"
+              alt="Product01"
+            ></a>
+
+          <a
+            href=""
+            title="WishList"
+          > <i class="far fa-heart product-badge"></i>
+          </a>
+
+          <a
+            href=""
+            class="product-title"
+            title="Monochrome"
+          >
+            <span>MONOCHROME</span>
+          </a>
+
+          <div class="product-pricing">
+            <span class="product-price">$425</span>
+          </div>
+        </article>
+        <!-- ./ catalog-tile  -->
+      </div>
+      <!-- ./ catalog-tiles  -->
+    </section>
+    <!-- ./ catalog-preview  -->
+
+    <section class="catalog-preview">
+      <h1>Most loved</h1>
+
+      <div class="catalog-tiles">
+        <article class="catalog-tile">
+          <a
+            href=""
+            class="image-container"
+            title="Product01"
+          ><img
+              src="../img/products/product01.png"
+              alt="Product01"
+            ></a>
+
+          <a
+            href=""
+            title="WishList"
+          > <i class="far fa-heart product-badge"></i>
+          </a>
+
+          <a
+            href=""
+            class="product-title"
+            title="Monochrome"
+          >
+            <span>MONOCHROME</span>
+          </a>
+
+          <div class="product-pricing">
+            <span class="product-price">$425</span>
+          </div>
+        </article>
+        <!-- ./ catalog-tile  -->
+
+        <article class="catalog-tile">
+          <a
+            href=""
+            class="image-container"
+            title="Product01"
+          ><img
+              src="../img/products/product02.png"
+              alt="Product01"
+            ></a>
+
+          <a
+            href=""
+            title="WishList"
+          > <i class="far fa-heart product-badge"></i>
+          </a>
+
+          <a
+            href=""
+            class="product-title"
+            title="Monochrome"
+          >
+            <span>MONOCHROME</span>
+          </a>
+
+          <div class="product-pricing">
+            <span class="product-price">$425</span>
+          </div>
+        </article>
+        <!-- ./ catalog-tile  -->
+
+        <article class="catalog-tile">
+          <a
+            href=""
+            class="image-container"
+            title="Product01"
+          ><img
+              src="../img/products/product03.png"
+              alt="Product01"
+            ></a>
+
+          <a
+            href=""
+            title="WishList"
+          > <i class="far fa-heart product-badge"></i>
+          </a>
+
+          <a
+            href=""
+            class="product-title"
+            title="Monochrome"
+          >
+            <span>MONOCHROME</span>
+          </a>
+
+          <div class="product-pricing">
+            <span class="product-price">$425</span>
+          </div>
+        </article>
+        <!-- ./ catalog-tile  -->
+
+        <article class="catalog-tile">
+          <a
+            href=""
+            class="image-container"
+            title="Product01"
+          ><img
+              src="../img/products/product04.png"
+              alt="Product01"
+            ></a>
+
+          <a
+            href=""
+            title="WishList"
+          > <i class="far fa-heart product-badge"></i>
+          </a>
+
+          <a
+            href=""
+            class="product-title"
+            title="Monochrome"
+          >
+            <span>MONOCHROME</span>
+          </a>
+
+          <div class="product-pricing">
+            <span class="product-price">$425</span>
+          </div>
+        </article>
+        <!-- ./ catalog-tile  -->
+      </div>
+      <!-- ./ catalog-tiles  -->
+    </section>
+    <!-- ./ catalog-preview 2   -->
+
+    <section class="home-promo">
+      <img
+        class="img-promo"
+        src="../img/oliver-pecker-HONJP8DyiSM-unsplash.png"
+        alt="oliver pecker"
+      >
+
+      <h2> <span>Watches for entrepreneurs</span> </h2>
+
+      <p>
+        But I must explain to you how all this mistaken idea of <br>
+        denouncing pleasure and praising pain was born and I <br> will
+        give you a complete account of the system, and <br> expound the
+        actual teachings of the great explorer of <br> the truth, the
+        master-builder of human happiness. No <br> one rejects, dislikes,
+        or avoids pleasure itself, because.
+      </p> <br>
+
+      <p>
+        But I must explain to you how all this mistaken idea of <br> denouncing
+        pleasure and praising pain was born and I <br> will give you a complete
+        account of the system, and <br> expound the actual teachings of the great
+        explorer of <br> the truth, the master-builder of human happiness. No <br> one
+        rejects, dislikes, or avoids pleasure itself, because.
+      </p>
+    </section>
+    <!-- ./home-promo  -->
+
+    <section class="catalog-preview">
+      <h1>Men`s</h1>
+
+      <div class="catalog-tiles">
+        <article class="catalog-tile">
+          <a
+            href=""
+            class="image-container"
+            title="Product01"
+          ><img
+              src="../img/products/Recently Viewed Thumbnail 2-5.png"
+              alt="Product01"
+            ></a>
+
+          <a
+            href=""
+            title="WishList"
+          > <i class="far fa-heart product-badge"></i>
+          </a>
+
+          <a
+            href=""
+            class="product-title"
+            title="Monochrome"
+          >
+            <span>MONOCHROME</span>
+          </a>
+
+          <div class="product-pricing">
+            <span class="product-price">$425</span>
+          </div>
+        </article>
+        <!-- ./ catalog-tile  -->
+
+        <article class="catalog-tile">
+          <a
+            href=""
+            class="image-container"
+            title="Product01"
+          ><img
+              src="../img/products/Recently Viewed Thumbnail 2-6.png"
+              alt="Product01"
+            ></a>
+
+          <a
+            href=""
+            title="WishList"
+          > <i class="far fa-heart product-badge"></i>
+          </a>
+
+          <a
+            href=""
+            class="product-title"
+            title="Monochrome"
+          >
+            <span>MONOCHROME</span>
+          </a>
+
+          <div class="product-pricing">
+            <span class="product-price">$425</span>
+          </div>
+        </article>
+        <!-- ./ catalog-tile  -->
+
+        <article class="catalog-tile">
+          <a
+            href=""
+            class="image-container"
+            title="Product01"
+          ><img
+              src="../img/products/Recently Viewed Thumbnail 2-8.png"
+              alt="Product01"
+            ></a>
+
+          <a
+            href=""
+            title="WishList"
+          > <i class="far fa-heart product-badge"></i>
+          </a>
+
+          <a
+            href=""
+            class="product-title"
+            title="Monochrome"
+          >
+            <span>MONOCHROME</span>
+          </a>
+
+          <div class="product-pricing">
+            <span class="product-price">$425</span>
+          </div>
+        </article>
+        <!-- ./ catalog-tile  -->
+
+        <article class="catalog-tile">
+          <a
+            href=""
+            class="image-container"
+            title="Product01"
+          ><img
+              src="../img/products/Recently Viewed Thumbnail 2-9.png"
+              alt="Product01"
+            ></a>
+
+          <a
+            href=""
+            title="WishList"
+          > <i class="far fa-heart product-badge"></i>
+          </a>
+
+          <a
+            href=""
+            class="product-title"
+            title="Monochrome"
+          >
+            <span>MONOCHROME</span>
+          </a>
+
+          <div class="product-pricing">
+            <span class="product-price">$425</span>
+          </div>
+        </article>
+        <!-- ./ catalog-tile  -->
+      </div>
+      <!-- ./ catalog-tiles  -->
+
+      <div>
+        <a
+          href=""
+          class="catalog-preview-cta"
+        >View All</a>
+      </div>
+    </section>
+    <!-- ./ catalog-preview 3   -->
+
+    <section class="catalog-preview">
+      <h1>Women`s</h1>
+
+      <div class="catalog-tiles">
+        <article class="catalog-tile">
+          <a
+            href=""
+            class="image-container"
+            title="Product01"
+          ><img
+              src="../img/products/Recently Viewed Thumbnail 2-4.png"
+              alt="Product01"
+            ></a>
+
+          <a
+            href=""
+            title="WishList"
+          > <i class="far fa-heart product-badge"></i>
+          </a>
+
+          <a
+            href=""
+            class="product-title"
+            title="Monochrome"
+          >
+            <span>MONOCHROME</span>
+          </a>
+
+          <div class="product-pricing">
+            <span class="product-price">$425</span>
+          </div>
+        </article>
+        <!-- ./ catalog-tile  -->
+
+        <article class="catalog-tile">
+          <a
+            href=""
+            class="image-container"
+            title="Product01"
+          ><img
+              src="../img/products/Recently Viewed Thumbnail 2-6.png"
+              alt="Product01"
+            ></a>
+
+          <a
+            href=""
+            title="WishList"
+          > <i class="far fa-heart product-badge"></i>
+          </a>
+
+          <a
+            href=""
+            class="product-title"
+            title="Monochrome"
+          >
+            <span>MONOCHROME</span>
+          </a>
+
+          <div class="product-pricing">
+            <span class="product-price">$425</span>
+          </div>
+        </article>
+        <!-- ./ catalog-tile  -->
+
+        <article class="catalog-tile">
+          <a
+            href=""
+            class="image-container"
+            title="Product01"
+          ><img
+              src="../img/products/Recently Viewed Thumbnail 2-15.png"
+              alt="Product01"
+            ></a>
+
+          <a
+            href=""
+            title="WishList"
+          > <i class="far fa-heart product-badge"></i>
+          </a>
+
+          <a
+            href=""
+            class="product-title"
+            title="Monochrome"
+          >
+            <span>MONOCHROME</span>
+          </a>
+
+          <div class="product-pricing">
+            <span class="product-price">$425</span>
+          </div>
+        </article>
+        <!-- ./ catalog-tile  -->
+
+        <article class="catalog-tile">
+          <a
+            href=""
+            class="image-container"
+            title="Product01"
+          ><img
+              src="../img/products/Recently Viewed Thumbnail 2-12.png"
+              alt="Product01"
+            ></a>
+
+          <a
+            href=""
+            title="WishList"
+          > <i class="far fa-heart product-badge"></i>
+          </a>
+
+          <a
+            href=""
+            class="product-title"
+            title="Monochrome"
+          >
+            <span>MONOCHROME</span>
+          </a>
+
+          <div class="product-pricing">
+            <span class="product-price">$425</span>
+          </div>
+        </article>
+        <!-- ./ catalog-tile  -->
+      </div>
+      <!-- ./ catalog-tiles  -->
+
+      <div>
+        <a
+          href=""
+          class="catalog-preview-cta"
+        >View All</a>
+      </div>
+    </section>
+    <!-- ./ catalog-preview 4   -->
+  </main>
+  <!-- ./ main  -->
+
+  <footer>
+
+  </footer>
+  <!-- ./ footer  -->
 
 
 
