--- a/Curs05/Ex03/index.html
+++ b/Curs05/Ex03/index.html
@@ -21,30 +21,30 @@
 
   <div class="container">
     <div class="row">
-      <div class="col">Last</div>
+      <div class="col order-last">Last</div>
       <div class="col">Second</div>
-      <div class="col">First</div>
+      <div class="col order-first">First</div>
     </div>
   </div>
 
   <div class="container">
     <div class="row">
-      <div class="col">5</div>
-      <div class="col">4</div>
-      <div class="col">3</div>
+      <div class="col order-last">5</div>
+      <div class="col order-6">4</div>
+      <div class="col order-5">3</div>
       <div class="col">2</div>
-      <div class="col">1</div>
+      <div class="col order-first">1</div>
     </div>
   </div>
 
   <div class="container">
     <div class="row">
-      <div class="col">10</div>
-      <div class="col">20</div>
-      <div class="col">30</div>
-      <div class="col">40</div>
+      <div class="col order-last">10</div>
+      <div class="col order-6">20</div>
+      <div class="col order-5">30</div>
+      <div class="col order-4">40</div>
       <div class="col">50</div>
-      <div class="col">60</div>
+      <div class="col order-first">60</div>
     </div>
   </div>
 </body>
