--- a/Curs05/Ex04/index.html
+++ b/Curs05/Ex04/index.html
@@ -62,9 +62,11 @@
 
   <!-- Ordoneaza al patrulea rand astfel incat culorile sa formeze ordinea RGB  -->
   <div class="container">
-    <div class="col afk order-last"></div>
-    <div class="col ott"></div>
-    <div class="col tbp order-first"></div>
+    <div class="row">
+      <div class="col afk order-3"></div>
+      <div class="col ott order-1"></div>
+      <div class="col tbp order-2"></div>
+    </div>
   </div>
 </body>
 </html>
