--- a/Thread Affair/html/index.html
+++ b/Thread Affair/html/index.html
@@ -18,7 +18,7 @@
   >
 </head>
 <body>
-  <header class="header">
+  <header class="header cont">
     <div class="header-contact">
       <p>
         <i class="fas fa-phone-alt"></i>
@@ -55,7 +55,7 @@
           </a>
         </li>
 
-        <li>
+        <li class="user-controls">
           <a
             href=""
             title="User"
@@ -153,31 +153,33 @@
 
   <main class="main">
     <header class="banner-main">
-      <h1>Office Suitts</h1>
+      <div class="cont">
+        <h1>Office Suitts</h1>
 
-      <h2>Get to work in style</h2>
+        <h2>Get to work in style</h2>
 
-      <a
-        href=""
-        title="create your suits"
-        class="banner-cta"
-      >Create your suite</a>
+        <a
+          href=""
+          title="create your suits"
+          class="banner-cta"
+        >Create your suite</a>
 
-      <section class="banner-copy">
-        <p>
-          <span>A Tailored Suit</span>that will fit you perfectly is a dream for everybody.
-        </p>
+        <section class="banner-copy">
+          <p>
+            <span>A Tailored Suit</span>that will fit you perfectly is a dream for everybody.
+          </p>
 
-        <p>
-          We provide you with the design and you choose if you like it or if you
-          want to change the details with our online configurator.
-        </p>
-      </section>
+          <p>
+            We provide you with the design and you choose if you like it or if you
+            want to change the details with our online configurator.
+          </p>
+        </section>
+      </div>
     </header>
     <!-- /. banner-main  -->
 
     <main class="content-main">
-      <section class="catalog-preview">
+      <section class="catalog-preview cont">
         <header>
           <h1>All time <span>bestsellers</span></h1>
 
@@ -293,7 +295,7 @@
                 title="Traveller Suits"
               >
                 <img
-                  src="../img/products/product-03a.jpg"
+                  src="/img/products/product-03a.jpg"
                   alt="thread Affair Traveller Suits - Image"
                 >
               </a>
@@ -338,7 +340,7 @@
       </section>
       <!-- /. catalog-preview  -->
 
-      <section class="catalog-preview">
+      <section class="catalog-preview cont">
         <header>
           <h1>New Collection</h1>
 
@@ -454,12 +456,12 @@
                 title="Traveller Suits"
               >
                 <img
-                  src="../img/products/product-066a.jpg"
+                  src="../img/products/product-06a.jpg"
                   alt="thread Affair Traveller Suits - Image"
                 >
               </a>
 
-              <span class="product-badge">signed</span>
+              <span class="product-badge product-badge-alt">signed</span>
             </div>
             <!-- /. product-image-container  -->
 
@@ -500,7 +502,10 @@
       <!-- /. catalog-preview  -->
 
       <section class="home-newsletter">
-        <form action="">
+        <form
+          action=""
+          class="cont"
+        >
           <h1>Subscribe to our <span>newsletter</span></h1>
 
           <input
@@ -513,7 +518,7 @@
       </section>
       <!-- /.home-newsletter  -->
 
-      <section class="home-payment">
+      <section class="home-payment cont">
         <h1>How to <span>pay</span></h1>
 
         <ul>
