--- a/Monochrome/html/index.html
+++ b/Monochrome/html/index.html
@@ -718,7 +718,185 @@
   </main>
   <!-- ./ main  -->
 
-  <footer>
+  <footer class="footer">
+    <div class="container">
+      <section class="footer-info">
+        <h3>How can we help?</h3>
+
+        <ul>
+          <li><a
+              href=""
+              title="call us"
+            >call us</a>
+          </li>
+
+          <li><a
+              href="tel:+44 (0)10 2345 6789"
+              title="+44 (0)10 2345 6789"
+            >+44 (0)10 2345 6789</a>
+          </li>
+
+          <li><a
+              href=""
+              title="email"
+            >EMAIL CUSTOMER CARE</a>
+          </li>
+
+          <li><a
+              href=""
+              title="mobile version"
+            >see mobile version</a>
+          </li>
+        </ul>
+
+        <ul>
+          <li>
+            <a
+              href=""
+              title="advice"
+            >style&fit advice</a>
+          </li>
+
+          <li>
+            <a
+              href=""
+              title="faqs"
+            >faqs</a>
+          </li>
+
+          <li>
+            <a
+              href=""
+              title="delivery"
+            >delivery</a>
+          </li>
+
+          <li>
+            <a
+              href=""
+              title="returns"
+            >exchagnes&returns</a>
+          </li>
+        </ul>
+
+        <ul>
+          <li>
+            <a
+              href=""
+              title="about us"
+            >about us</a>
+          </li>
+
+          <li>
+            <a
+              href=""
+              title="careers"
+            >careers</a>
+          </li>
+
+          <li>
+            <a
+              href=""
+              title="affiliates"
+            >affiliates</a>
+          </li>
+
+          <li>
+            <a
+              href=""
+              title="advertising"
+            >advertising</a>
+          </li>
+        </ul>
+
+        <ul>
+          <li>
+            <a
+              href=""
+              title="conditions"
+            >terms&conditions</a>
+          </li>
+
+          <li>
+            <a
+              href=""
+              title="privacy"
+            >privacy&cookies</a>
+          </li>
+        </ul>
+      </section>
+
+      <section class="footer-subscribe">
+        <h3>Let`s connect!</h3>
+
+        <form action="">
+          <p>Be the first to receive exclusives offers</p>
+
+          <p>sign up for our newsletter</p>
+
+          <label for="email"></label>
+          <input
+            type="email"
+            name="email"
+            id="email"
+            placeholder="Email"
+          >
+
+          <button type="submit">Submit</button>
+
+          <p>
+            I agree with <a
+              href=""
+              title="privacy"
+            >Privacy Policy</a>and i want to receive emails from Monochrome
+          </p>
+        </form>
+
+        <div class="footer-social">
+          <p>We are highly likeable</p>
+
+          <ul>
+            <li>
+              <a
+                href="http://www.youtube.com"
+                target="_blank"
+                rel="noopener noreferrer"
+                title="youtube"
+              ><i class="fab fa-youtube"></i></a>
+            </li>
+
+            <li>
+              <a
+                href="http://www.twiter.com"
+                target="_blank"
+                rel="noopener noreferrer"
+                title="twiter"
+              ><i class="fab fa-twitter"></i></a>
+            </li>
+
+            <li>
+              <a
+                href="http://www.facebook.com"
+                target="_blank"
+                rel="noopener noreferrer"
+                title="facebook"
+              ><i class="fab fa-twitter"></i></a>
+            </li>
+
+            <li>
+              <a
+                href="http://www.instagram.com"
+                target="_blank"
+                rel="noopener noreferrer"
+                title="instagram"
+              ><i class="fab fa-instagram-square"></i></a>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+
+    </div>
 
   </footer>
   <!-- ./ footer  -->
